--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,32 @@
-.current_display {
+p {
     border: 2px solid green ;
+    width: 100%;
+    height: 8%;
     width: 25%;
+    text-align: right;
+    margin: 20px auto;
 }
 
 .row_1 {
+    width: 25%;
+    margin: -17px auto;
+}
+
+.row_2 {
+    width: 25%;
+    margin: 16px auto;
+
+}
+
+.row_1, .row_2 {
+   
+}
+
+.button {
     border: 1px solid black;
     display: inline-block;
+    zoom: 1;
+    width: 15.9%;
+    text-align: center;
+    padding: 5px;
 }
