--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,12 @@
-p {
+.fa {
+    margin: 0 auto;
+    top: 64px;
+    left: 18.3rem;
+    position: absolute;
+}
+
+
+/* p {
     border: 2px solid green ;
     width: 100%;
     height: 8%;
@@ -9,6 +17,11 @@ p {
 
 i {
     height: 18px;
+}
+
+.sq_root {
+    height: 18px;
+    margin: 0 auto 0;
 }
 
 .row_1 {
@@ -26,6 +39,11 @@ i {
     margin: -2px auto 0;
 }
 
+.row_4 {
+    width: 25%;
+    margin: -4px auto 0;
+}
+
 .button {
     border: 1px solid black;
     display: inline-block;
@@ -33,4 +51,4 @@ i {
     width: 16.9%;
     text-align: center;
     padding: 5px;
-}
+} */
