--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,28 @@
+.calculator {
+    padding: 10px;
+    height: 380px;
+    width: 400px;
+    margin: 30px auto;
+    background-color: 15133C;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.display {
+    background-color: 73777B;
+    border: solid whitesmoke 0.5px;
+    color: black;
+    border-radius: 5px;
+    width: 205%;
+    height: 75%;
+}
+
+#btn {
+    background-color: #EC994B;
+}
+
 .divide, .plus_minus, .minus, .plus {
     position: absolute;
-    margin: 10px 4px;
+    margin: 10px 3px;
 }
 
 .multiply {
@@ -13,6 +35,30 @@
     position: absolute;
 }
 
+.mortgage {
+    position: absolute;
+    margin: 3px 6.5px;
+}
+
+.temperature {
+    position: absolute;
+    margin: 3px 10px;
+}
+
+input[type=button] {
+    font-family: 'Orbitron', sans-serif;
+    width: 100%;
+    height: 70%;
+    background-color: #F1EEE9;
+    border: solid black 0.5px;
+    border-radius: 5px;
+    outline: none;
+}
+
+#mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
+    width: 20%;
+    margin: auto auto;
+}
 
 /* p {
     border: 2px solid green ;
