--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
     border: solid whitesmoke 0.5px;
     color: black;
     border-radius: 5px;
-    width: 205%;
+    width: 218%;
     height: 75%;
 }
 
@@ -47,12 +47,19 @@
 
 input[type=button] {
     font-family: 'Orbitron', sans-serif;
+    font-size: medium;
     width: 100%;
     height: 70%;
     background-color: #F1EEE9;
     border: solid black 0.5px;
     border-radius: 5px;
     outline: none;
+}
+
+input:active[type=button] {
+    background: #EC994B;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
 }
 
 #mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
