--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
-table {
-    /* border-spacing: 0; */
-    /* border-collapse: collapse; */
-}
+/* table {
+    border-spacing: 0; 
+    border-collapse: collapse;
+    column-gap: 0;
+} */
 
 .calculator {
     padding: 10px;
@@ -10,7 +11,7 @@ table {
     margin: 30px auto;
     background-color: 15133C;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-    
+
 }
 
 .display {
@@ -18,7 +19,7 @@ table {
     border: solid whitesmoke 0.5px;
     color: black;
     border-radius: 5px;
-    width: 218%;
+    width: 820%;
     height: 75%;
 }
 
@@ -69,7 +70,7 @@ input:active[type=button] {
 }
 
 #mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
-    width: 20%;
+    /* width: 20%; */
     margin: auto auto;
 }
 
