--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* table {
-    border-spacing: 0; 
+    border-spacing: 0;
     border-collapse: collapse;
     column-gap: 0;
 } */
@@ -14,11 +14,11 @@
 }
 
 .display {
-    background-color: 73777B;
+    background-color: #73777B;
     border: solid whitesmoke 0.5px;
     color: black;
     border-radius: 5px;
-    width: 605%;
+    width: 258%;
     height: 75%;
 }
 
@@ -26,14 +26,22 @@
     background-color: #EC994B;
 }
 
-.divide, .plus_minus, .minus, .plus {
+.divide, .minus, .plus {
     position: absolute;
-    margin: 10px 3px;
+    margin: 18px 10px;
+    font-size: large;
+}
+
+.plus_minus {
+    position: absolute;
+    margin: 18px 15px;
+    font-size: large;
 }
 
 .multiply {
     position: absolute;
-    margin: 11px 5px;
+    margin: 18px 15px;
+    font-size: large;
 }
 
 .square_root {
@@ -69,7 +77,7 @@ input:active[type=button] {
 }
 
 #mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
-    width: 100%;
-    margin: auto auto;
+    width: 60%;
+    /* margin: auto auto; */
 }
 
