--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,73 @@
-/* table {
-    border-spacing: 0;
-    border-collapse: collapse;
-    column-gap: 0;
-} */
-
-.calculator {
-    padding: 10px;
-    height: 380px;
-    width: 300px;
-    margin: 30px auto;
-    background-color: 15133C;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+table {
+    border-spacing: 0.5em 0.5em;
+    border: 1px solid orange;
 }
 
+td {
+    width: 3em;
+    height: 2.5em;
+}
+
+/* #mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
+}  */
+
+.calculator {
+    padding: 5px;
+    border-radius: 1em;
+    margin: 30px auto;
+    background-color: #15133C;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+    
 .display {
+    font-family: 'Orbitron', sans-serif;
     background-color: #73777B;
+    border-radius: 5px;
+    width: 586%;
+    height: 90%;
     border: solid whitesmoke 0.5px;
     color: black;
     border-radius: 5px;
-    width: 258%;
-    height: 75%;
 }
-
+    
 #btn {
     background-color: #EC994B;
+}
+    
+input[type=button] {
+    font-family: 'Orbitron', sans-serif;
+    background-color: #F1EEE9;
+    color: black;
+    border: solid black 0.5px;
+    width: 3em;
+    border-radius: 5px;
+    height: 2em;
+    outline: none;
+    font-size: medium;
+}
+    
+input:active[type=button] {
+    background: #EC994B;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+    -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+    box-shadow: inset 0px 0px 5px #c1c1c1;
 }
 
 .divide, .minus, .plus {
     position: absolute;
-    margin: 18px 10px;
+    margin: 16px 18px;
     font-size: large;
 }
 
 .plus_minus {
     position: absolute;
-    margin: 18px 15px;
+    margin: 16px 17px;
     font-size: large;
 }
 
 .multiply {
     position: absolute;
-    margin: 18px 15px;
+    margin: 16px 19px;
     font-size: large;
 }
 
@@ -51,33 +78,10 @@
 
 .mortgage {
     position: absolute;
-    margin: 3px 6.5px;
+    margin: 7px 15px;
 }
 
 .temperature {
     position: absolute;
-    margin: 3px 10px;
+    margin: 7px 19px;
 }
-
-input[type=button] {
-    font-family: 'Orbitron', sans-serif;
-    font-size: medium;
-    width: 100%;
-    height: 70%;
-    background-color: #F1EEE9;
-    border: solid black 0.5px;
-    border-radius: 5px;
-    outline: none;
-}
-
-input:active[type=button] {
-    background: #EC994B;
-    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
-    box-shadow: inset 0px 0px 5px #c1c1c1;
-}
-
-#mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
-    width: 60%;
-    /* margin: auto auto; */
-}
-
