--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ td {
     font-family: 'Orbitron', sans-serif;
     background-color: #73777B;
     border-radius: 5px;
-    width: 586%;
+    width: 585%;
     height: 90%;
     border: solid whitesmoke 0.5px;
     color: black;
@@ -57,6 +57,7 @@ input:active[type=button] {
     position: absolute;
     margin: 16px 18px;
     font-size: large;
+    font-weight: bold;
 }
 
 .plus_minus {
@@ -72,8 +73,8 @@ input:active[type=button] {
 }
 
 .square_root {
-    font: FontAwesome;
     position: absolute;
+    margin: 2px 8px;
 }
 
 .mortgage {
