--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap'); */
+
+
 table {
     border-spacing: 0.5em 0.5em;
     border: 1px solid orange;
