--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,18 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap'); */
-
-
 table {
     border-spacing: 0.5em 0.5em;
     border: 1px solid orange;
+}
+
+body {
+    padding: 0;
+    margin: 0;
+    background: linear-gradient(to right, #6d9bb1, #110659)
 }
 
 td {
     width: 3em;
     height: 2.5em;
 }
-
-/* #mc, #percent, #plus_minus, #square_root, #ac, #mortgage {
-}  */
 
 .calculator {
     padding: 5px;
